--- a/index.html
+++ b/index.html
@@ -1,46 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Josué Echandia Asto</title>
-   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <title>Josué Echandia Asto</title>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" />
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
+
 <body>
-   <header class="header">
-   	<nav class="header__nav">
-      	<i class="material-icons large-icon">menu</i>
-   	</nav> 
-		  <div class="slider">
-		    <ul class="slides">
-		      <li>
-		        <img src="https://images.unsplash.com/photo-1414690165279-49ab0a9a7e66?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=e6da171be370444eabceb9525e424627"> <!-- random image -->
-		        <div class="caption center-align">
-		        	<h3>Josué Echandia Asto</h3>
-		          <h5 class="light grey-text text-lighten-3">"No eres muy joven para programar"<br>Pues si lo soy</h5>
-		        </div>
-		      </li>
-		      <li>
-		        <img src="https://images.unsplash.com/photo-1428223501723-d821c5d00ca3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=e5bd1e83a3aa65c5853fd3a7951d0816"> <!-- random image -->
-		        <div class="caption left-align">
-			        <h3>"Cualquiera habla, muestrame el código"</h3>
-			        <h5 class="light grey-text text-lighten-3">-Linus Torvalds-</h5>
-		        </div>
-		      </li>
-		     </ul>
-		   </div>
-   </header>
-   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
-   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-   <script type="text/javascript" src="js/materialize.min.js"></script>
-   <script>
-      $(document).ready(function(){
-	      $('.slider').slider({
-	      	full_width: true,
-	      	height: "100vh"
-	      });
-  		});
-   </script>
+    <header class="header">
+        <div class="header__container">
+            <nav class="header__nav">
+                <i class="icon material-icons">menu</i>
+            </nav>
+            <div class="box_principal">
+                <div class="title">
+                    <figure><img src="https://scontent.fgru3-2.fna.fbcdn.net/v/t1.0-9/14100509_853362811466630_3994352990477881762_n.jpg?oh=27fd48c3c401369d601de04c5795b9b0&oe=5881C88B" alt="Josue Manuel Echandia Asto"></figure>
+                    <h1>Josué<br>Echandía<br>Asto</h1>
+                    <p class="center">@josucode</p>
+                </div>
+                <div class="social">
+                    <div class="item">
+                        <a href="https://www.facebook.com/josuemanuel.echandiaasto"><i class="icon-facebook"></i></a>
+                    </div>
+                    <div class="item ">
+                        <a href="https://twitter.com/JosueEchandiaA"><i class="icon-twitter"></i></a>
+                    </div>
+                    <div class="item">
+                        <a href="https://github.com/JosueEchandiaAsto"><i class="icon-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="src/fondo.jpg">
+                <!-- <img src="https://hd.unsplash.com/photo-1432888498266-38ffec3eaf0a"> -->
+            </div>
+            <!-- <img src="https://images.alphacoders.com/646/646740.png"></div> -->
+        </div>
+    </header>
+    <section class="presentacion">
+        Hola
+    </section>
+
+
+
+
+
+
+
+
+
+
+    <link href="https://fonts.googleapis.com/css?family=Assistant|Indie+Flower" rel="stylesheet">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.parallax').parallax();
+        });
+    </script>
 </body>
+
 </html>
