--- a/index.html
+++ b/index.html
@@ -5,108 +5,156 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Josué Manuel Echandia Asto</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <figure><img src="src/fondo.png" class="fondo"></figure>
+    <figure class="fondo_container"><img src="src/fondo.png" class="fondo"></figure>
+    <header class="header" id="header">
+        <div class="container-principal relative">
+            <figure><img class="foto" src="https://scontent-gru2-1.xx.fbcdn.net/v/t1.0-9/14100509_853362811466630_3994352990477881762_n.jpg?oh=27fd48c3c401369d601de04c5795b9b0&oe=5881C88B" alt="" /></figure>
             <div class="title_principal">
-                <h1>Josué Manuel Echandía Asto</h1>
-                <h2>Developer Frontend y Android</h2>
+                <span><div class="line"></div></span>
+                <h1 class="uppercase title_principal_first_line">Josué Echandía</h1>
+                <h2 class="uppercase">Developer Frontend and Android</h2>
+                <span><div class="line"></div></span>
             </div>
-            <div class="buttons_social_container">
-                <img src="src/icon_circle_message.png">
-                <img src="src/icon_circle_googleplus.png">
-                <img src="src/icon_circle_facebook.png">
-                <img src="src/icon_circle_twitter.png">
-                <img src="src/icon_circle_youtube.png">
+            <div class="absolute container-social">
+                <div class="buttons_social_container">
+                    <a href="mailto:josueechandiasto@gmail.com?subject=Te escribo desde tu Página Web"><img src="src/icon_circle_message.png"></a>
+                    <a href="https://plus.google.com/u/0/102884327344984359961"><img src="src/icon_circle_googleplus.png"></a>
+                    <a href="https://www.facebook.com/josuechandiasto"><img src="src/icon_circle_facebook.png"></a>
+                    <a href="https://twitter.com/josucode"><img src="src/icon_circle_twitter.png"></a>
+                    <a href="https://www.youtube.com/channel/UCa99DE8vnh_E9jcCeIn5fwA"><img src="src/icon_circle_youtube.png"></a>
+                </div>
+                <span class="copyright">Josué Echandía Asto| 2016</span>
             </div>
-            <span>Josué Echandía | 2016</span>
         </div>
     </header>
-    <section class="aboutme_container">
-        <img src="src/person.png" alt="">
-        <h3>Hola, me llamo Josué, tengo 16 años, soy desarrollador Frontend y Android. Soy Bloguero y Youtuber de JosDev</h3>
-        <div class="aboutme_container_social">
-            <img src="src/icon_outline_twitter.png" alt="">
-            <img src="src/icon_outline_googleplus.png" alt="">
-            <img src="src/icon_outline_linkedin.png" alt="">
-            <img src="src/icon_outline_github.png" alt="">
-            <img src="src/icon_outline_snapchat.png" alt="">
-            <img src="src/icon_outline_blogger.png" alt="">
-            <img src="src/icon_outline_facebook.png" alt="">
-            <img src="src/icon_outline_youtube.png" alt="">
+    <nav class="menu" id="menu">
+      <ul>
+        <li><a href="#header">Inicio</a></li>
+        <li><a href="#aboutme">Sobre Mí</a></li>
+        <li><a href="#conocimientos">Mis Conocimientos</a></li>
+        <li><a href="#mywork">Mi Trabajo</a></li>
+      </ul>
+    </nav>
+    <section id="aboutme" class="aboutme_container">
+        <div class="container">
+            <img src="src/person.png" alt="">
+            <p>Hola, me llamo Josué, tengo 16 años, soy desarrollador Frontend y Android. Soy Bloguero y Youtuber de JosDev</p>
+            <div class="aboutme_container_social">
+                <a target="_blank" href="https://twitter.com/josucode"><img src="src/icon_outline_twitter.png" alt=""></a>
+                <a target="_blank" href="https://plus.google.com/u/0/102884327344984359961"><img src="src/icon_outline_googleplus.png" alt=""></a>
+                <a target="_blank" href="https://www.linkedin.com/in/josue-echandia-asto-a6b97b121"><img src="src/icon_outline_linkedin.png" alt=""></a>
+                <a target="_blank" href="https://github.com/JosueEchandiaAsto"><img src="src/icon_outline_github.png" alt=""></a>
+                <a target="_blank" href=""><img src="src/icon_outline_snapchat.png" alt=""></a>
+                <a target="_blank" href=""><img src="src/icon_outline_blogger.png" alt=""></a>
+                <a target="_blank" href="https://www.facebook.com/josuechandiasto"><img src="src/icon_outline_facebook.png" alt=""></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCa99DE8vnh_E9jcCeIn5fwA"><img src="src/icon_outline_youtube.png" alt=""></a>
+            </div>
         </div>
     </section>
-    <section class="conocimientos_container">
-        <h3>Mis Conocimientos</h3>
-        <div class="conocimientos_container_item">
-            <figure class="conocimientos_item">
-                <img src="src/android.png" alt="" />
-                <p>
-                    Developer Fullstack Android
-                </p>
-            </figure>
-            <figure class="conocimientos_item">
-                <img src="src/web.png" alt="" />
-                <p>
-                    Developer Frontend Professional
-                </p>
-            </figure>
+    <section id="conocimientos" class="conocimientos_container">
+        <div class="container">
+            <div class="title_container">
+                <span><div class="line left"></div></span>
+                <h3 class="uppercase">Mis Conocimientos</h3>
+                <span><div class="line right"></div></span>
+            </div>
+            <div class="conocimientos_container_item">
+                <figure class="conocimientos_item">
+                    <img src="src/android.png" alt="" />
+                    <p>
+                        Developer Fullstack Android
+                    </p>
+                </figure>
+                <figure class="conocimientos_item">
+                    <img src="src/web.png" alt="" />
+                    <p>
+                        Developer Frontend Professional
+                    </p>
+                </figure>
+            </div>
         </div>
     </section>
-    <section class="mywork_container">
-        <h3>Mi Trabajo</h3>
-        <article class="mywork_item">
-            <img class="mywork_item_img" src="src/work.png" alt="" />
-            <div class="mywork_item_description">
-                <p>Mi Portafolio</p>
-                <span class="mywork_item_description_button">
-            Ir al sitio
-          </span>
+    <section id="mywork" class="mywork_container">
+        <div class="container">
+            <div class="title_container">
+                <span><div class="line left"></div></span>
+                <h3 class="uppercase">Mis Trabajos</h3>
+                <span><div class="line right"></div></span>
             </div>
-        </article>
-        <article class="mywork_item">
-            <img class="mywork_item_img" src="src/work.png" alt="" />
-            <div class="mywork_item_description">
-                <p>Mi Portafolio</p>
-                <span class="mywork_item_description_button">
-            Ir al sitio
-          </span>
+            <div class="mywork_item_container">
+                <article class="mywork_item">
+                    <img class="mywork_item_img" src="src/work.png" alt="" />
+                    <div class="mywork_item_description">
+                        <p>Mi Portafolio</p>
+                        <span class="mywork_item_description_button">Ir al sitio</span>
+                    </div>
+                </article>
+                <article class="mywork_item">
+                    <img class="mywork_item_img" src="src/work.png" alt="" />
+                    <div class="mywork_item_description">
+                        <p>Mi Portafolio</p>
+                        <span class="mywork_item_description_button">
+              Ir al sitio
+            </span>
+                    </div>
+                </article>
+                <article class="mywork_item">
+                    <img class="mywork_item_img" src="src/work.png" alt="" />
+                    <div class="mywork_item_description">
+                        <p>Mi Portafolio</p>
+                        <span class="mywork_item_description_button">
+              Ir al sitio
+            </span>
+                    </div>
+                </article>
+                <article class="mywork_item">
+                    <img class="mywork_item_img" src="src/work.png" alt="" />
+                    <div class="mywork_item_description">
+                        <p>Mi Portafolio</p>
+                        <span class="mywork_item_description_button">
+              Ir al sitio
+            </span>
+                    </div>
+                </article>
             </div>
-        </article>
-        <article class="mywork_item">
-            <img class="mywork_item_img" src="src/work.png" alt="" />
-            <div class="mywork_item_description">
-                <p>Mi Portafolio</p>
-                <span class="mywork_item_description_button">
-            Ir al sitio
-          </span>
-            </div>
-        </article>
-        <article class="mywork_item">
-            <img class="mywork_item_img" src="src/work.png" alt="" />
-            <div class="mywork_item_description">
-                <p>Mi Portafolio</p>
-                <span class="mywork_item_description_button">
-            Ir al sitio
-          </span>
-            </div>
-        </article>
+        </div>
     </section>
-    <div class="buttons_social_container">
-        <img src="src/icon_circle_message.png">
-        <img src="src/icon_circle_googleplus.png">
-        <img src="src/icon_circle_facebook.png">
-        <img src="src/icon_circle_twitter.png">
-        <img src="src/icon_circle_youtube.png">
+    <div class="buttons_social_container box-social">
+        <a href="mailto:josueechandiasto@gmail.com?subject=Te escribo desde tu Página Web"><img src="src/icon_circle_message.png"></a>
+        <a href="https://plus.google.com/u/0/102884327344984359961"><img src="src/icon_circle_googleplus.png"></a>
+        <a href="https://www.facebook.com/josuechandiasto"><img src="src/icon_circle_facebook.png"></a>
+        <a href="https://twitter.com/josucode"><img src="src/icon_circle_twitter.png"></a>
+        <a href="https://www.youtube.com/channel/UCa99DE8vnh_E9jcCeIn5fwA"><img src="src/icon_circle_youtube.png"></a>
     </div>
-    <img src="src/button_up.png" alt="" />
+    <img class="button-menu activate" id="button-show" src="src/burgerbutton.png" alt="" />
+    <img class="button-menu" id="button-close" src="src/closebutton.png" alt="" />
+    <a href="#header"><img class="button_up" src="src/button_up.png" alt="" /></a>
     <footer class="footer">
-        <span>Josué Echandía | 2016</span>
+        <span class="copyright">Josué Echandía | 2016</span>
     </footer>
-</body>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,700" rel="stylesheet">
+    <script type="text/javascript">
+      var menu = document.getElementById('menu');
+      var button_show = document.getElementById("button-show");
+      var button_close = document.getElementById("button-close");
 
+      button_show.addEventListener("click",function () {
+        button_show.classList.remove("activate");
+        button_close.classList.add("activate");
+        menu.classList.toggle("activate");
+      })
+
+      button_close.addEventListener("click",function () {
+        button_close.classList.remove("activate");
+        button_show.classList.add("activate");
+        menu.classList.toggle("activate");
+      })
+    </script>
+</body>
 </html>
