--- a/index.html
+++ b/index.html
@@ -1,217 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Josué Manuel Echandia Asto</title>
-</head>
-
-<body>
-    <figure class="fondo_container"><img src="https://hd.unsplash.com/40/whtXWmDGTTuddi1ncK5v_IMG_0097.jpg" class="fondo"></figure>
-    <header class="header" id="header">
-        <div class="container-principal relative">
-            <figure><img class="foto" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/14441020_870263949776516_2094469694068484797_n.jpg?oh=153f1cd3f404aa33b74f103ba71e766c&oe=58A9B691" alt="" /></figure>
-            <div class="title_principal">
-                <span><div class="line line-principal"></div></span>
-                <h1 class="uppercase-title title_principal_first_line">Josué Echandía</h1>
-                <h2 class="uppercase-title ">Developer Frontend and Android</h2>
-                <span><div class="line line-principal"></div></span>
-            </div>
-            <div class="absolute container-social">
-                <div class="buttons_social_container">
-                    <a href="mailto:josueechandiasto@gmail.com?subject=Te escribo desde tu Página Web"><img src="src/icon_circle_message.png"></a>
-                    <a href="https://plus.google.com/u/0/102884327344984359961"><img src="src/icon_circle_googleplus.png"></a>
-                    <a href="https://www.facebook.com/josuechandiasto"><img src="src/icon_circle_facebook.png"></a>
-                    <a href="https://twitter.com/josucode"><img src="src/icon_circle_twitter.png"></a>
-                    <a href="https://www.youtube.com/channel/UCa99DE8vnh_E9jcCeIn5fwA"><img src="src/icon_circle_youtube.png"></a>
-                </div>
-                <span class="copyright">Josué Echandía Asto| 2016</span>
-            </div>
-        </div>
-    </header>
-    <div class="menu" id="menu">
-        <ul>
-            <li><a href="#header">Inicio</a></li>
-            <li><a href="#aboutme">Sobre Mí</a></li>
-            <li><a href="#mycertificate">Mis Certificados</a></li>
-            <li><a href="#conocimientos">Mis Conocimientos</a></li>
-            <li><a href="#mywork">Mi Trabajo</a></li>
-        </ul>
-    </div>
-    <section id="aboutme" class="aboutme_container">
-        <div class="container">
-            <img src="src/person.png" alt="">
-            <p>Hola, me llamo Josué, tengo 16 años, soy desarrollador Frontend y Android. Soy Bloguero y Youtuber de JosDev</p>
-            <div class="aboutme_container_social">
-                <a target="_blank" href="https://twitter.com/josucode"><img src="src/icon_outline_twitter.png" alt=""></a>
-                <a target="_blank" href="https://plus.google.com/u/0/102884327344984359961"><img src="src/icon_outline_googleplus.png" alt=""></a>
-                <a target="_blank" href="https://www.linkedin.com/in/josue-echandia-asto-a6b97b121"><img src="src/icon_outline_linkedin.png" alt=""></a>
-                <a target="_blank" href="https://github.com/JosueEchandiaAsto"><img src="src/icon_outline_github.png" alt=""></a>
-                <a target="_blank" href=""><img src="src/icon_outline_snapchat.png" alt=""></a>
-                <a target="_blank" href=""><img src="src/icon_outline_blogger.png" alt=""></a>
-                <a target="_blank" href="https://www.facebook.com/josuechandiasto"><img src="src/icon_outline_facebook.png" alt=""></a>
-                <a target="_blank" href="https://www.youtube.com/channel/UCa99DE8vnh_E9jcCeIn5fwA"><img src="src/icon_outline_youtube.png" alt=""></a>
-            </div>
-        </div>
-    </section>
-    <section id="conocimientos" class="conocimientos_container">
-        <div class="container">
-            <div class="title_container">
-                <span><div class="line left"></div></span>
-                <h3 class="uppercase">Mis Conocimientos</h3>
-                <span><div class="line right"></div></span>
-            </div>
-            <div class="conocimientos_container_item">
-                <figure class="conocimientos_item">
-                    <img src="src/android.png" alt="" />
-                    <p>
-                        Developer Fullstack Android
-                    </p>
-                </figure>
-                <figure class="conocimientos_item">
-                    <img src="src/web.png" alt="" />
-                    <p>
-                        Developer Frontend Professional
-                    </p>
-                </figure>
-            </div>
-        </div>
-    </section>
-    <section id="mycertificate" class="mywork_container">
-        <div class="container">
-            <div class="title_container">
-                <span><div class="line left"></div></span>
-                <h3 class="uppercase">Mis Certificados</h3>
-                <span><div class="line right"></div></span>
-            </div>
-            <div class="mywork_item_container">
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/frontend.jpg-large">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/google.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/javascript.jpg-large">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/web.jpg">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/git.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/html5.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/java.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/polymer.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/rd.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/web2.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/marca.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/wordpress.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/leanux.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/basica.png">
-                </article>
-                <article class="mywork_item">
-                    <img class="materialboxed mywork_item_img" width="350px" src="src/certificate/illustrator.png">
-                </article>
-            </div>
-        </div>
-    </section>
-    <section id="mywork" class="mywork_container">
-        <div class="container">
-            <div class="title_container">
-                <span><div class="line left"></div></span>
-                <h3 class="uppercase">Mis Trabajos</h3>
-                <span><div class="line right"></div></span>
-            </div>
-            <div class="mywork_item_container">
-                <article class="mywork_item">
-                    <img class="mywork_item_img" src="src/sfotipy.jpg" alt="" />
-                    <div class="mywork_item_description">
-                        <p>Mi Sfotipy</p>
-                        <span class="mywork_item_description_button"><a target="newblack" href="http://josueechandiaasto.github.io/Sfotipy/">Ir al Sitio</a></span>
-                    </div>
-                </article>
-                <article class="mywork_item">
-                    <img class="mywork_item_img" src="src/invie.png" alt="" />
-                    <div class="mywork_item_description">
-                        <p>Invie</p>
-                        <span class="mywork_item_description_button"><a target="newblack" href="http://josueechandiaasto.github.io/Sfotipy/">Ir al Sitio</a></span>
-                    </div>
-                </article>
-                <article class="mywork_item">
-                    <img class="mywork_item_img" src="src/emusap.png" alt="" />
-                    <div class="mywork_item_description">
-                        <p>EMUSAP SAC.</p>
-                        <span class="mywork_item_description_button"><a target="newblack" href="http://josueechandiaasto.github.io/EMUSAP/">Ir al Sitio</a></span>
-                    </div>
-                </article>
-                <article class="mywork_item">
-                    <img class="mywork_item_img" src="src/work.png" alt="" />
-                    <div class="mywork_item_description">
-                        <p>Mi Portafolio</p>
-                        <span class="mywork_item_description_button">Ir al sitio</span>
-                    </div>
-                </article>
-            </div>
-        </div>
-    </section>
-    <div class="buttons_social_container box-social">
-        <a href="mailto:josueechandiasto@gmail.com?subject=Te escribo desde tu Página Web"><img src="src/icon_circle_message.png"></a>
-        <a href="https://plus.google.com/u/0/102884327344984359961"><img src="src/icon_circle_googleplus.png"></a>
-        <a href="https://www.facebook.com/josuechandiasto"><img src="src/icon_circle_facebook.png"></a>
-        <a href="https://twitter.com/josucode"><img src="src/icon_circle_twitter.png"></a>
-        <a href="https://www.youtube.com/channel/UCa99DE8vnh_E9jcCeIn5fwA"><img src="src/icon_circle_youtube.png"></a>
-    </div>
-    <img class="button-menu activate" id="button-show" src="src/burgerbutton.png" alt="" />
-    <img class="button-menu" id="button-close" src="src/closebutton.png" alt="" />
-    <a href="#header"><img class="button_up" src="src/button_up.png" alt="" /></a>
-    <footer class="footer">
-        <span class="copyright">Josué Echandía | 2016</span>
-    </footer>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,700" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <script type="text/javascript">
-        var menu = document.getElementById('menu');
-        var button_show = document.getElementById("button-show");
-        var button_close = document.getElementById("button-close");
-
-        button_show.addEventListener("click", function() {
-            button_show.classList.remove("activate");
-            button_close.classList.add("activate");
-            menu.classList.toggle("activate");
-        })
-
-        button_close.addEventListener("click", function() {
-            button_close.classList.remove("activate");
-            button_show.classList.add("activate");
-            menu.classList.toggle("activate");
-        })
-        $(document).ready(function() {
-            $('.materialboxed').materialbox();
-        });
-    </script>
-</body>
-
+<html> 
+<head> 
+<title>Redirigir al navegador a otra URL</title> 
+<META HTTP-EQUIV="REFRESH" CONTENT="URL=http://josuechandiasto.com/"> 
+</head> 
+<body> 
+</body> 
 </html>
