--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
 <head> 
 <title>Redirigir al navegador a otra URL</title> 
-<META HTTP-EQUIV="REFRESH" CONTENT="URL=http://josuechandiasto.com/"> 
+<META HTTP-EQUIV="REFRESH" CONTENT="0,URL=http://josuechandiasto.com/"> 
 </head> 
 <body> 
 </body> 
